--- a/SoF_event_extracter/templates/navbar.html
+++ b/SoF_event_extracter/templates/navbar.html
@@ -5,6 +5,7 @@
         <li><a href="">About</a></li>
         <li><a href="{% url 'login' %}">Login</a></li>
         <li><a href="{% url 'signup' %}">Register</a></li>
+        <li><a href="{% url 'upload_sof' %}">Upload</a></li>
     </ul>
     <div class="hamburger" id="hamburger">
         ☰
